# Raylib-ImGui-Hybrid

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  PROJECT_OVERVIEW.md  README.md  build.py  cpp.hint  install_emsdk.py
Editor/: CMakeLists.txt
Editor/src/: ApplicationLayout.cpp  ApplicationTheme.cpp  EditorApp.cpp  EditorLayer.cpp  EditorLayer.h
Engine/: CMakeLists.txt
Engine/src/Core/Application/: Application.cpp  Application.h  EntryPoint.h
Engine/src/Core/Base/: Core.h
Engine/src/Core/Events/: ApplicationEvent.h  KeyEvent.h
Engine/src/Core/Input/: Input.cpp
Engine/src/Core/Layers/: Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h
Engine/src/Core/Renderer/: AssetManager.cpp  AssetManager.h
Engine/src/Scene/: Components.h  Entity.h  Scene.cpp  Scene.h
Game/: CMakeLists.txt
Game/src/: GameComponents.h  GameLayer.cpp  GameLayer.h
GameLauncher/: CMakeLists.txt
GameLauncher/src/: GameApp.cpp
cmake/: Assets.cmake  Dependencies.cmake  ImGui.cmake  Options.cmake  Platform.cmake
scripts/: activate.bat  activate.ps1  activate.sh  build.py  install_emsdk.py
src/: main.cpp
src/Core/: Application.cpp  Application.h  ApplicationLayout.h  ApplicationTheme.h  EntryPoint.h
src/Core/Application/: Application.cpp  Application.h  ApplicationConfig.h  ApplicationLayout.cpp  ApplicationLayout.h  ApplicationTheme.cpp  ApplicationTheme.h  EntryPoint.cpp  EntryPoint.h
src/Core/Base/: Core.h
src/Core/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
src/Core/Input/: Input.cpp  Input.h
src/Core/Layers/: LayerStack.h
src/Core/Logging/: Log.cpp  Log.h
src/Core/Renderer/: ModelLoader.cpp  ModelLoader.h  ScopedResources.h
src/Layers/: ModelViewerLayer.cpp  ModelViewerLayer.h
src/imterm/: terminal_helpers.hpp
